--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,1 +1,15 @@
 @import '~bootstrap/dist/css/bootstrap';
+
+
+body
+{
+    margin:0px;
+    padding: 0px;
+}
+
+.btn-create{
+    background-image: linear-gradient(180deg, #7834db 0%, #88adcf 50%, #e8d7d7 100%);
+    border: 0px;
+    color: white;
+    border-radius: 15px;
+}
