--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,8 +8,10 @@ body
 }
 
 .btn-create{
-    background-image: linear-gradient(180deg, #7834db 0%, #88adcf 50%, #e8d7d7 100%);
+    background-image: linear-gradient(180deg, #d6c213 0%, #537eb3 50%, #fafafa 100%);
     border: 0px;
     color: white;
     border-radius: 15px;
 }
+
+
