--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,11 +7,15 @@ body
     padding: 0px;
 }
 
+
 .btn-create{
-    background-image: linear-gradient(180deg, #d6c213 0%, #537eb3 50%, #fafafa 100%);
+    background-image: linear-gradient(180deg, #d6c213 0%, #529af2 50%, #fafafa 100%);
     border: 0px;
     color: white;
     border-radius: 15px;
 }
+
+
+
 
 
