--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap';
+@import '~flag-icon-css/css/flag-icons';
 @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&family=Varela+Round&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Rock+Salt&family=Varela+Round&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Condensed&family=Rock+Salt&family=Varela+Round&display=swap');
