--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -86,6 +86,21 @@ body
     justify-items: center;
     padding:40px;
 }
+.form-login-create{
+    display: block;
+    margin: auto;
+    width: 750px;
+    background-color: rgba(255,255,255,0.6);
+    border-radius: 10px;
+    backdrop-filter: blur(5px);
+    border: 1px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 20px rgba(8,7,16,06);
+    padding: 30px 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+
+}
 .form-login{
     display: block;
     margin: auto;
