--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -112,6 +112,9 @@ body
     box-shadow: 0 0 40px rgba(8,7,16,06);
     padding: 50px 35px;
 }
+.form-login h2{
+    font-family:'Roboto Condensed', sans-serif;
+}
 .lable-login{
     display: block;
     margin-top: 2rem;
@@ -123,7 +126,7 @@ body
     width: 100%;
     background-color: #f4f3f367;
     border-radius: 4px;
-    padding: 15px 10px;
+    padding: 10px 10px;
     margin-top: 8px;
     font-weight: 100px;
     margin-bottom: 35px;
