--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -124,24 +124,35 @@ body
     outline: none;
     border: none;
     width: 100%;
-    background-color: #f4f3f367;
+   /*  height: 50px; */
+    background-color: rgb(245, 237, 237);
     border-radius: 4px;
     padding: 10px 10px;
     margin-top: 8px;
     font-weight: 100px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
+    
 }
 .input-login::before{
     color: rgb(87,79,79);
 }
+.input-register{
+    outline: none;
+    border: none;
+    width: 100%;
+    background-color: rgb(245, 237, 237);
+    border-radius: 4px;
+    padding: 5px 5px;
+    margin-top: 8px;
+    font-weight: 100px;
+
+}
 .pass{
 position: relative;
-outline: none;
 border: none;
-background-color: #f4f3f367;
+background-color: rgb(245, 237, 237);
 border-radius: 4px;
 padding: 6px;
-margin-top: 8px;
 
 width: 100%;
 font-weight: 100px;
@@ -161,7 +172,7 @@ font-weight: 100px;
     width: 100%;
     background-color: #ffffff;
     padding: 15px 0;
-    font-size: 18px;
+    font-size: 20px;
     border-radius: 5px;
     cursor: pointer;
     border: none;
