--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,36 +22,13 @@ body
     font-size: 35px;
 }
 
-.btn-create{
-    margin-left: 20px;
-    font-size: 18px;
-    color: white;
-    text-decoration: none;
-    margin-right: 10px;
-    border-radius: 25px;
-    padding: 7px;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
-.my-btn{
-    margin-left: 20px;
-    font-size: 18px;
-    color: white;
-    text-decoration: none;
-    margin-right: 10px;
-    border-radius: 25px;
-    background:#323b45;
-    padding: 7px;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
 .my-dropdown-width{
     min-width: 0 !important; 
 }
 
 
 .my-nav{
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
     background: #114358;
     font-size: 20px;
     display: flex;
@@ -100,7 +77,7 @@ body
     display: block;
     margin: auto;
     width: 750px;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,1);
     border-radius: 10px;
     backdrop-filter: blur(5px);
     border: 1px solid rgba(255,255,255,0.1);
@@ -123,7 +100,7 @@ body
     padding: 50px 35px;
 }
 .form-login h2{
-    font-family:'Roboto Condensed', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
 }
 .lable-login{
     display: block;
@@ -134,13 +111,11 @@ body
     outline: none;
     border: none;
     width: 100%;
-   /*  height: 50px; */
-    background-color: rgb(245, 237, 237);
-    border-radius: 4px;
+    background-color: rgba(245,222,198,1);
+    border-radius: 25px;
     padding: 10px 10px;
     margin-top: 8px;
     font-weight: 100px;
-    margin-bottom: 30px;
     
 
 }
@@ -151,8 +126,8 @@ body
     outline: none;
     border: none;
     width: 100%;
-    background-color: rgb(249, 246, 246);
-    border-radius: 4px;
+    background-color: rgba(245,222,198,1);
+    border-radius: 25px;
     padding: 5px 5px;
     margin-top: 8px;
     font-weight: 100px;
@@ -162,13 +137,12 @@ body
 .pass{
 position: relative;
 border: none;
-background-color: rgb(244, 238, 238);
-border-radius: 4px;
-padding: 6px;
-
+background-color: rgba(245,222,198,1);
+border-radius: 25px;
 width: 100%;
 font-weight: 100px;
 }
+
 .pass i{
     position: absolute;
     top: 50%;
@@ -179,21 +153,7 @@ font-weight: 100px;
 #show-hide{
     font-size: 1rem;
 }
-.btn-login{
-    margin-top: 30px;
-    width: 100%;
-    background-color: #ffffff;
-    padding: 15px 0;
-    font-size: 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    transition: all 0.1s;
-}
-.btn-login:hover{
-    transform: translate(-0.25rem, -0.25rem);
-    box-shadow: 0.25rem 0.25rem #2a2a2c;
-}
+
 hr{
     margin-top: 20px;
     height: 1px;
@@ -260,7 +220,7 @@ hr{
 
 
 .product-grid{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
     text-align: center;
     margin: 5px 15px 0;
     border-radius: 10px;
@@ -364,7 +324,7 @@ nav, .main-font, footer {
     }
 }
 
-/* Show-------------- */
+/* Buttons */
 
 .btn-show{
     font-size: 25px;
@@ -373,8 +333,44 @@ nav, .main-font, footer {
     border-radius: 25px;
     background:#323b45;
     padding: 5px 3px;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
     display: flex;
     justify-content: center;
     width: 150px;
+}
+
+.my-btn-call{
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+    border-radius: 25px;
+    padding: 7px;
+    font-family: 'Comfortaa', sans-serif;
+}
+
+.my-btn{
+    margin-left: 20px;
+    margin-right: 10px;
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+    border-radius: 25px;
+    background:#323b45;
+    padding: 7px;
+    font-family: 'Comfortaa', sans-serif;
+}
+
+.btn-login{
+    margin-top: 30px;
+    width: 100%;
+    padding: 15px 0;
+    font-size: 20px;
+    border-radius: 25px;
+    cursor: pointer;
+    border: none;
+    transition: all 0.1s;
+}
+.btn-login:hover{
+    transform: translate(-0.25rem, -0.25rem);
+    box-shadow: 0.25rem 0.25rem #2a2a2c;
 }
