--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -84,6 +84,7 @@ body
     padding: 30px 30px;
     margin-top: 30px;
     margin-bottom: 30px;
+    background: url(/public/images/Shopping-rafiki.png);
 
 
 }
