--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -370,7 +370,7 @@ nav, .main-font, footer {
 
 
 
-.container-cat{
+/* .container-cat{
     margin: auto;
     display: flex;
     justify-content: center;
@@ -386,6 +386,37 @@ nav, .main-font, footer {
 }
 .my-baby img{
     width: 50px;
+} */
+.categories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.category {
+    text-align: center;
+    margin: 60px 40px 40px 40px;
+}
+.category img:hover{
+    box-shadow: 0px 0px 10px 2px rgba(255,193, 6, 0.5);
+    border-radius: 10px;
+
+    padding: 5px;
+}
+
+.category img {
+    width: 100%;
+    max-width: 75px;
+    height: auto;
+
+
+}
+
+.category p {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0 0;
 }
 
 
