--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -411,3 +411,95 @@ nav, .main-font, footer {
 
 
 
+
+
+
+
+.card {
+    width: 300px;
+    height: 550px;
+    border-radius: 40px;
+    border: none;
+    overflow: hidden;
+    /* background: navajowhite;
+    box-shadow:
+    10px 10px 10px #ffc107,
+    -10px -10px 20px navajowhite; */
+    padding: 25px;
+    margin: 30px;
+    border-radius: 54px;
+    background: navajowhite;
+    box-shadow:  15px 15px 30px #ffc107,
+            -41px -41px 84px #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-container {
+    width: 92%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-container img {
+    width: 80%;
+    height: auto;
+    border-radius: 80%;
+    box-shadow:
+        0px 0px 20px #c9c9c9,
+        0px 0px 20px #ffffff;
+
+}
+
+.content {
+    padding: 20px;
+}
+
+h2 {
+    font-size: 25px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 'Roboto Condensed', sans-serif;
+}
+
+p {
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color:#2a2a2c;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+    margin-top: 20px;
+}
+
+.button:hover {
+    background-color:#ffc107;
+    transform: translateY(-3px);
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .card {
+    height: auto;
+    }
+
+    .card-image {
+    height: 40%;
+    }
+
+    .card-content {
+    padding: 10px;
+    }
+}
+
+
