--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -415,16 +415,16 @@ nav, .main-font, footer {
 
 
 
-.card {
+/* .card {
     width: 300px;
     height: 550px;
     border-radius: 40px;
     border: none;
     overflow: hidden;
-    /* background: navajowhite;
+    background: navajowhite;
     box-shadow:
     10px 10px 10px #ffc107,
-    -10px -10px 20px navajowhite; */
+    -10px -10px 20px navajowhite;
     padding: 25px;
     margin: 30px;
     border-radius: 54px;
@@ -434,7 +434,7 @@ nav, .main-font, footer {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 .image-container {
     width: 92%;
@@ -488,7 +488,7 @@ p {
 
 
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .card {
     height: auto;
     }
@@ -500,6 +500,6 @@ p {
     .card-content {
     padding: 10px;
     }
-}
+} */
 
 
