--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -429,7 +429,7 @@ nav, .main-font, footer {
 
 .card-about {
     width: 300px;
-    height: 450px;
+    height: 550px;
     border-radius: 40px;
     border: none;
     overflow: hidden;
@@ -438,9 +438,6 @@ nav, .main-font, footer {
     background: navajowhite;
     box-shadow:  15px 15px 20px #ffc107,
             -41px -41px 84px #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .image-container {
@@ -453,16 +450,18 @@ nav, .main-font, footer {
 
 .image-container img {
     width: 80%;
-    height: auto;
+    height: 85%;
     border-radius: 80%;
-    box-shadow:
-        0px 0px 20px #c9c9c9,
-        0px 0px 20px #ffffff;
-
+    margin-left:25px ;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content {
-    padding: 20px;
+    padding: 30px;
+    margin: 20px;
 }
 
 h2 {
@@ -480,12 +479,11 @@ p {
 .button {
     display: inline-block;
     padding: 10px 20px;
-    background-color:#2a2a2c;
-    color: #fff;
+    background-color:#114358;
+    color: #fafafa;
     text-decoration: none;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
-    margin-top: 20px;
 }
 
 .button:hover {
