--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -453,7 +453,7 @@ nav, .main-font, footer {
     height: 85%;
     border-radius: 80%;
     margin-left:25px ;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -461,7 +461,7 @@ nav, .main-font, footer {
 
 .content {
     padding: 30px;
-    margin: 20px;
+    margin: 10px 0 0 25px;
 }
 
 h2 {
