--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -400,7 +400,7 @@ nav, .main-font, footer {
     margin: 60px 40px 40px 40px;
 }
 .category img:hover{
-    box-shadow: 0px 0px 10px 2px #C6E8F4;
+    box-shadow: 0px 0px 10px 2px rgba(255,193, 6, 0.5);
     border-radius: 10px;
 
     padding: 5px;
