--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -471,3 +471,10 @@ nav, .main-font, footer {
     font-size: 24px;
 }
 
+
+
+.blur-in-expand{
+    animation:blur-in-expand 1s linear both
+}
+@keyframes blur-in-expand{
+    0%{transform:scale(0);filter:blur(12px);opacity:0}100%{transform:scale(1);filter:blur(0);opacity:1}}
